objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AW_Change_of_Consultant_Form__c</fullName>
        <label>Change of Consultant(Orphans Only)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Not Submitted - Reallocate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_ClientInteractionOutcome__c</fullName>
        <description>Captures feedback from client interaction</description>
        <label>Client Interaction Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Call Made</fullName>
                </value>
                <value>
                    <fullName>Appointment Made</fullName>
                </value>
                <value>
                    <fullName>Client Not Available</fullName>
                </value>
                <value>
                    <fullName>Contact Details Incorrect</fullName>
                </value>
                <value>
                    <fullName>Client Doesn&apos;t Want Adviser</fullName>
                </value>
                <value>
                    <fullName>I Don&apos;t Want This Orphan</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Client Not Contacted - Reallocate</fullName>
                </value>
                <value>
                    <fullName>Lead Unwanted \ Declined</fullName>
                </value>
                <value>
                    <fullName>Client Called</fullName>
                </value>
                <value>
                    <fullName>Client Contacted Successfully</fullName>
                </value>
                <value>
                    <fullName>Client Not Interested</fullName>
                </value>
                <value>
                    <fullName>Appointment Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Appointment Seen</fullName>
                </value>
                <value>
                    <fullName>Deadline Reached - Reallocate Orphan</fullName>
                    <isActive>false</isActive>
                    <label>Deadline Reached - Reallocate Orphan</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Client_Interaction_Outcome_Feedback__c</fullName>
        <label>Client Interaction Outcome Feedback</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AW_ClientInteractionOutcome__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Client Not Available</fullName>
                </value>
                <value>
                    <fullName>Deferred \ Moving Forward with Appointment in future</fullName>
                </value>
                <value>
                    <fullName>Client not Interested in seeing an Adviser</fullName>
                </value>
                <value>
                    <fullName>Disclosure Signed</fullName>
                </value>
                <value>
                    <fullName>Change of Broker Signed</fullName>
                </value>
                <value>
                    <fullName>Change of Broker Submitted</fullName>
                </value>
                <value>
                    <fullName>Liberty Systems Updated with Disclosure Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_RD_ActiveAdviser__c</fullName>
        <description>Captures whether the Adviser who is assigned to the record is active. This custom field is created for reports that run on Activities and uses the standard report type. We lose the ability to report on activity type if we go with custom report type.</description>
        <formula>Owner:User.IsActive = TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Adviser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_RD_AdviserBranch__c</fullName>
        <description>Captures the branch of the adviser who created the activity. This custom field is created for reports that run on Activities and uses the standard report type. We lose the ability to report on activity type if we go with custom report type.</description>
        <formula>CreatedBy.AW_Branch__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Branch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RD_AdviserConsultantCode__c</fullName>
        <description>Captures the consultant code of the adviser who created the activity. This custom field is created for reports that run on Activities and uses the standard report type. We lose the ability to report on activity type if we go with custom report type.</description>
        <formula>CreatedBy.AW_ConsultantCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Consultant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RD_AdviserRegion__c</fullName>
        <description>Captures the region of the adviser who created the activity. This custom field is created for reports that run on Activities and uses the standard report type. We lose the ability to report on activity type if we go with custom report type.</description>
        <formula>CreatedBy.AW_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adviser Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User can select if event should be review.</description>
        <inlineHelpText>If my Meeting is a Review</inlineHelpText>
        <label>Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_SummaryComments__c</fullName>
        <description>Summary of Comments field</description>
        <inlineHelpText>Summarises Comments field  to 255</inlineHelpText>
        <label>Summary Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_TaskCategory__c</fullName>
        <description>Used to differentiate Tasks generated during the Orphan Management process</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adviser</fullName>
                    <default>true</default>
                    <label>Adviser</label>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_TaskForMyAssistant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes task for assistant when checked.</description>
        <inlineHelpText>Please check if task is for assistant.</inlineHelpText>
        <label>Task For My Assistant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Expectations__c</fullName>
        <description>Notes about client&apos;s expectations</description>
        <label>Expectations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Household associated with the task</description>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__NextSteps__c</fullName>
        <description>Notes about follow-up activities</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Objectives__c</fullName>
        <description>Notes about client&apos;s objectives</description>
        <label>Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FinServ__Regarding__c</fullName>
        <description>Nature of interaction with the client</description>
        <label>Regarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_OnHoldComments__c</fullName>
        <label>On Hold Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RSC_OnHoldReasons__c</fullName>
        <description>Field used to state reason for On Hold</description>
        <label>On Hold Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Update</fullName>
                </value>
                <value>
                    <fullName>Overnight Update</fullName>
                </value>
                <value>
                    <fullName>Annuity Transfer Authorized</fullName>
                </value>
                <value>
                    <fullName>Awaiting Decision</fullName>
                </value>
                <value>
                    <fullName>Awaiting Document Print</fullName>
                </value>
                <value>
                    <fullName>Other Departments</fullName>
                </value>
                <value>
                    <fullName>Refer To Department Name</fullName>
                </value>
                <value>
                    <fullName>Document Scanning</fullName>
                </value>
                <value>
                    <fullName>Verification</fullName>
                </value>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>Anniversary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Assistance Required</fullName>
                </value>
                <value>
                    <fullName>Review Response</fullName>
                </value>
                <value>
                    <fullName>Systematic Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_MeetingSuccess__c</fullName>
        <description>STANLIB Business Develop Managers to use this field to rate their Events.</description>
        <label>Meeting Success</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Highly Successful</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Not Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLR_PostMeetingNote__c</fullName>
        <description>STANLIB Business Development Managers to insert notes about how their meeting went.</description>
        <label>Post Meeting Note</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>